fix footer spacing on tablet

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -6,7 +6,7 @@
         padding: 7rem 0 4rem 0rem;
     }
     @include tablet {
-        padding: 9rem 0 4rem 0rem;
+        padding: 7rem 0 4rem 0rem;
     }
     @include laptop {
         padding: 7rem 0 4rem 0rem;
