--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -10,15 +10,19 @@
     opacity: 1;
     position: fixed;
     letter-spacing: 0.03rem;
+    height: 510px;
     @include laptop {
         width: 215px;
         letter-spacing: 0.06rem;
+        height: 560px;
     }
     @include desktop-small {
         width: 235px;
+        height: 590px;
     }
     @include desktop {
         width: 265px;
+        height: 630px;
     }
     background: $darkestgrey;
     &__profile {
@@ -35,10 +39,12 @@
         height: 16px;
         position: fixed;
         z-index: 9;
-        left: 10px;
-        top: 14px;
+        left: 0;
+        top: 0;
         opacity: 0.7;
         display: none;
+        padding: 13px 11px;
+        cursor: pointer;
         @include tablet {
             display: block;
         }
